@@ -2,7 +2,7 @@ import base64, re, traceback, os, sys
 from Alias import ps_alias
 from Colours import Colours
 from Utils import validate_sleep_time
-from DB import new_task, update_sleep, get_history, select_item, update_label, unhide_implant, kill_implant, get_implantdetails, get_c2server_all, get_newimplanturl, get_allurls, get_sharpurls, get_cred_by_id
+from DB import new_task, update_sleep, get_history, select_item, update_label, unhide_implant, kill_implant, get_implantdetails, get_c2server_all, get_newimplanturl, get_allurls, get_sharpurls, get_cred_by_id, new_c2_message
 from AutoLoads import check_module_loaded, run_autoloads
 from Help import posh_help, posh_help1, posh_help2, posh_help3, posh_help4, posh_help5, posh_help6, posh_help7, posh_help8
 from Config import PayloadsDirectory, POSHDIR, ROOTDIR, SocksHost
@@ -147,9 +147,8 @@ def handle_ps_command(command, user, randomuri, startup, createdaisypayload, cre
         ri = input("Are you sure you want to quit? (Y/n) ")
         if ri.lower() == "n":
             startup(user)
-        if ri == "":
-            sys.exit(0)
-        if ri.lower() == "y":
+        if ri == "" or ri.lower() == "y":
+            new_c2_message("%s logged off." % user)
             sys.exit(0)
 
     elif command.startswith("invoke-psexec ") or command.startswith("invoke-smbexec "):
